# pilot

./: .env  .gitignore  Cargo.toml  Config.toml  Dockerfile  LICENSE  Makefile  README.md  api.http
.github/workflows/: github-actions.yml  pilot.yml
entity/: Cargo.toml
entity/sql/: mysql-init-data.sql  mysql.sql
entity/sql/mysql/: app.sql  mysql-init-data.sql  rbac.sql
entity/src/: app.rs  app_extend.rs  app_extra.rs  app_ns.rs  cluster.rs  collection.rs  common.rs  constant.rs  department.rs  enums.rs  favorite.rs  item.rs  lib.rs  namespace.rs  prelude.rs  publication.rs  publication_record.rs  release.rs  release_history.rs  release_record.rs  role.rs  role_rule.rs  rule.rs  user.rs  user_role.rs  users.rs  utils.rs
entity/src/common/: enums.rs  mod.rs
entity/src/dao/: app.rs  app_extend.rs  cluster.rs  item.rs  mod.rs  namespace.rs  release.rs
entity/src/model/: app.rs  app_extend.rs  app_extra.rs  cluster.rs  collection.rs  common.rs  department.rs  item.rs  mod.rs  namespace.rs  operate_log.rs  release.rs  release_history.rs  role.rs  role_rule.rs  rule.rs  user_role.rs  users.rs
entity/src/response/: model.rs
primordial/: Cargo.toml  Config.toml
primordial/src/: main.rs
primordial/src/web/: mod.rs  route.rs  user.rs
primordial/src/web/backend/: mod.rs
primordial/src/web/backend/api/: app.rs  config.rs  mod.rs  response.rs
primordial/src/web/backend/models/: app.rs  item.rs  mod.rs
primordial/src/web/backend/store/: db.rs  mod.rs  prelude.rs
src/: config.rs  main.rs
src/web/: mod.rs  route.rs  user.rs
src/web/api/: check.rs  common.rs  helper.rs  mod.rs
src/web/api/backend/: app.rs  app_extend.rs  app_extra.rs  app_ns.rs  cluster.rs  collection.rs  department.rs  favorite.rs  item.rs  mod.rs  namespace.rs  publication.rs  release.rs  users.rs
src/web/api/forent/: config.rs  mod.rs
src/web/api/model/: mod.rs
src/web/api/permission/: accredit.rs  mod.rs
src/web/backend/: mod.rs
src/web/backend/api/: app.rs  app_ns.rs  check.rs  cluster.rs  common.rs  config.rs  item.rs  mod.rs  namespace.rs  response.rs
src/web/backend/store/: db.rs  mod.rs  prelude.rs
src/web/extract/: json.rs  jwt.rs  mod.rs  query.rs  response.rs  utils.rs
src/web/extract/error/: error.rs  mod.rs  param.rs  permision.rs
src/web/extract/request/: body.rs  json.rs  mod.rs  query.rs
src/web/extract/response/: mod.rs  success.rs
src/web/middleware/: cros.rs  jwt.rs  metrics.rs  mod.rs  trace.rs
src/web/store/: cache.rs  db.rs  mod.rs  store.rs
src/web/store/dao/: app.rs  app_extend.rs  app_extra.rs  cluster.rs  collection.rs  department.rs  favorite.rs  item.rs  mod.rs  namespace.rs  prelude.rs  publication.rs  publication_record.rs  release.rs  release_history.rs  release_record.rs  role.rs  rule.rs  user_role.rs  users.rs
