[package]
edition = "2021"
name = "primordial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity"]

[dependencies]
axum = "0.4"
chrono = "0.4"
md5 = "0.7"
ahash = "0.7"
entity = {path = "entity"}
lazy_static = "1.4"
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
once_cell = "1.10.0"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
tower = {version = "0.4", features = ["util"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
