[package]
edition = "2021"
name = "pilot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity"]

[dependencies]
dotenv = "0.15"
axum = { version = "0.6", features = ["headers","macros"]}
headers = "0.3"
jsonwebtoken = "8"
async-session = "3"
chrono = "0.4"
md5 = "0.7"
bcrypt = "0.14"
regex = "1"
ahash = "0.8"
entity = {path = "entity"}
lazy_static = "1.4"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
rand = "0.8"
once_cell = "1.17"
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.7"
tokio = {version = "1", features = ["full"]}
toml = "0.7"
tower = {version = "0.4", features = ["util"]}
tower-http = { version = "0.4", features = ["trace","cors"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["local-time"]}
