[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features = ["derive"] }
chrono = "0.4"
harsh = "0.2"
once_cell = "1.10.0"
sea-orm = { version = "0",features = ["sqlx-mysql","macros", "runtime-tokio-native-tls", "debug-print","with-chrono"]}

# [dependencies.sea-orm]
# version = "0.7"
# features = ["macros", "runtime-tokio-native-tls", "debug-print","with-chrono"]
# default-features = false

# [features]
# default = ["sqlx-mysql"]
# sqlx-mysql = ["sea-orm/sqlx-mysql"]
# sqlx-postgres = ["sea-orm/sqlx-postgres"]