[package]
edition = "2021"
name = "entity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
harsh = "0.2"
once_cell = "1.17"
sea-orm = {version = "0.11", features = ["sqlx-mysql", "macros", "runtime-tokio-native-tls", "debug-print", "with-chrono"]}
serde = {version = "1", features = ["derive"]}