[package]
name = "primordial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"
chrono = "0.4"

[dependencies.sea-orm]
version = "0.5"
features = ["macros", "runtime-tokio-native-tls", "debug-print"]
default-features = false

[features]
default = ["sqlx-mysql"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]